# kopis

./: AGENTS.md  README.md  pyproject.toml
src/kopis/: __init__.py
