[project]
name = "kopis"
version = "0.0.1"
description = "Kopis (aka \"kopis\") is a library facilitating web application development in pure Python, eliminating the need for HTML, CSS, or JavaScript/TypeScript."
readme = "README.md"
authors = [
    { name = "Marko Tasic", email = "mtasic85@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
