[project]
name = "kopis"
version = "0.0.1"
description = "Kopis (aka \"kopis\") is a library facilitating web application development in pure Python, eliminating the need for HTML, CSS, or JavaScript/TypeScript."
readme = "README.md"
authors = [
    { name = "Marko Tasic", email = "mtasic85@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nodejs-wheel-binaries>=24.12.0"
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  "kopis",
]
lint = [
    "ruff>=0.14.9",
    "ty>=0.0.2",
]
test = [
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0"
]

[tool.uv.workspace]
members = [
    ".",
    ".",
    ".",
]

[tool.uv.sources]
kopis = { workspace = true }
